lib/parts/strings-parser.js
module.exports = (function() {
    /*
     * Generated by PEG.js 0.8.0.
     *
     * http://pegjs.majda.cz/
     */

    function peg$subclass(child, parent) {
        function ctor() {
            this.constructor = child;
        }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }

    function SyntaxError(message, expected, found, offset, line, column) {
        this.message = message;
        this.expected = expected;
        this.found = found;
        this.offset = offset;
        this.line = line;
        this.column = column;

        this.name = "SyntaxError";
    }

    peg$subclass(SyntaxError, Error);

    function parse(input) {
        var options = arguments.length > 1 ? arguments[1] : {},

            peg$FAILED = {},

            peg$startRuleFunctions = {
                start: peg$parsestart
            },
            peg$startRuleFunction = peg$parsestart,

            peg$c0 = peg$FAILED,
            peg$c1 = [],
            peg$c2 = function(each) {
                return each;
            },
            peg$c3 = function(first, others) {
                var result = [first];
                if (others) {
                    result = result.concat(others);
                }
                return result
            },
            peg$c4 = "=",
            peg$c5 = {
                type: "literal",
                value: "=",
                description: "\"=\""
            },
            peg$c6 = ";",
            peg$c7 = {
                type: "literal",
                value: ";",
                description: "\";\""
            },
            peg$c8 = function(key, value) {
                return {
                    "type": "languageKey",
                    "key": key.value,
                    "value": value.value
                };
            },
            peg$c9 = "/*",
            peg$c10 = {
                type: "literal",
                value: "/*",
                description: "\"/*\""
            },
            peg$c11 = function() {
                return text()
            },
            peg$c12 = "*/",
            peg$c13 = {
                type: "literal",
                value: "*/",
                description: "\"*/\""
            },
            peg$c14 = function(text) {
                return {
                    "type": "comment",
                    "multiline": true,
                    "text": text.replace(/[\r\n][\s\t]*[\*]*/g, " ")
                        .trim()
                        .replace(/[\s]+/g, " ")
                };
            },
            peg$c15 = "/",
            peg$c16 = {
                type: "literal",
                value: "/",
                description: "\"/\""
            },
            peg$c17 = "#",
            peg$c18 = {
                type: "literal",
                value: "#",
                description: "\"#\""
            },
            peg$c19 = /^[^\n\^\r]/,
            peg$c20 = {
                type: "class",
                value: "[^\\n\\^\\r]",
                description: "[^\\n\\^\\r]"
            },
            peg$c21 = function(text) {
                return {
                    "type": "comment",
                    "multiline": false,
                    "text": text.join("").trim().replace(/[\s]+/g, " ")
                };
            },
            peg$c22 = {
                type: "other",
                description: "string"
            },
            peg$c23 = "\"",
            peg$c24 = {
                type: "literal",
                value: "\"",
                description: "\"\\\"\""
            },
            peg$c25 = function(chars) {
                return {
                    type: "Literal",
                    value: chars.join("")
                };
            },
            peg$c26 = "'",
            peg$c27 = {
                type: "literal",
                value: "'",
                description: "\"'\""
            },
            peg$c28 = void 0,
            peg$c29 = "\\",
            peg$c30 = {
                type: "literal",
                value: "\\",
                description: "\"\\\\\""
            },
            peg$c31 = function() {
                return text();
            },
            peg$c32 = function(sequence) {
                return sequence;
            },
            peg$c33 = function() {
                return "";
            },
            peg$c34 = "0",
            peg$c35 = {
                type: "literal",
                value: "0",
                description: "\"0\""
            },
            peg$c36 = function() {
                return "\0";
            },
            peg$c37 = "b",
            peg$c38 = {
                type: "literal",
                value: "b",
                description: "\"b\""
            },
            peg$c39 = function() {
                return "\b";
            },
            peg$c40 = "f",
            peg$c41 = {
                type: "literal",
                value: "f",
                description: "\"f\""
            },
            peg$c42 = function() {
                return "\f";
            },
            peg$c43 = "n",
            peg$c44 = {
                type: "literal",
                value: "n",
                description: "\"n\""
            },
            peg$c45 = function() {
                return "\n";
            },
            peg$c46 = "r",
            peg$c47 = {
                type: "literal",
                value: "r",
                description: "\"r\""
            },
            peg$c48 = function() {
                return "\r";
            },
            peg$c49 = "t",
            peg$c50 = {
                type: "literal",
                value: "t",
                description: "\"t\""
            },
            peg$c51 = function() {
                return "\t";
            },
            peg$c52 = "v",
            peg$c53 = {
                type: "literal",
                value: "v",
                description: "\"v\""
            },
            peg$c54 = function() {
                return "\x0B";
            },
            peg$c55 = "x",
            peg$c56 = {
                type: "literal",
                value: "x",
                description: "\"x\""
            },
            peg$c57 = "u",
            peg$c58 = {
                type: "literal",
                value: "u",
                description: "\"u\""
            },
            peg$c59 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
            },
            peg$c60 = /^[\n\r\u2028\u2029]/,
            peg$c61 = {
                type: "class",
                value: "[\\n\\r\\u2028\\u2029]",
                description: "[\\n\\r\\u2028\\u2029]"
            },
            peg$c62 = {
                type: "other",
                description: "whitespace"
            },
            peg$c63 = "\t",
            peg$c64 = {
                type: "literal",
                value: "\t",
                description: "\"\\t\""
            },
            peg$c65 = "\x0B",
            peg$c66 = {
                type: "literal",
                value: "\x0B",
                description: "\"\\x0B\""
            },
            peg$c67 = "\f",
            peg$c68 = {
                type: "literal",
                value: "\f",
                description: "\"\\f\""
            },
            peg$c69 = " ",
            peg$c70 = {
                type: "literal",
                value: " ",
                description: "\" \""
            },
            peg$c71 = "\xA0",
            peg$c72 = {
                type: "literal",
                value: "\xA0",
                description: "\"\\xA0\""
            },
            peg$c73 = "\uFEFF",
            peg$c74 = {
                type: "literal",
                value: "\uFEFF",
                description: "\"\\uFEFF\""
            },
            peg$c75 = {
                type: "any",
                description: "any character"
            },
            peg$c76 = {
                type: "other",
                description: "end of line"
            },
            peg$c77 = "\n",
            peg$c78 = {
                type: "literal",
                value: "\n",
                description: "\"\\n\""
            },
            peg$c79 = "\r\n",
            peg$c80 = {
                type: "literal",
                value: "\r\n",
                description: "\"\\r\\n\""
            },
            peg$c81 = "\r",
            peg$c82 = {
                type: "literal",
                value: "\r",
                description: "\"\\r\""
            },
            peg$c83 = "\u2028",
            peg$c84 = {
                type: "literal",
                value: "\u2028",
                description: "\"\\u2028\""
            },
            peg$c85 = "\u2029",
            peg$c86 = {
                type: "literal",
                value: "\u2029",
                description: "\"\\u2029\""
            },
            peg$c87 = /^[^*]/,
            peg$c88 = {
                type: "class",
                value: "[^*]",
                description: "[^*]"
            },
            peg$c89 = "*",
            peg$c90 = {
                type: "literal",
                value: "*",
                description: "\"*\""
            },
            peg$c91 = /^[^\/]/,
            peg$c92 = {
                type: "class",
                value: "[^\\/]",
                description: "[^\\/]"
            },
            peg$c93 = /^[0-9]/,
            peg$c94 = {
                type: "class",
                value: "[0-9]",
                description: "[0-9]"
            },
            peg$c95 = /^[0-9a-f]/i,
            peg$c96 = {
                type: "class",
                value: "[0-9a-f]i",
                description: "[0-9a-f]i"
            },
            peg$c97 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
            peg$c98 = {
                type: "class",
                value: "[ \\xA0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]",
                description: "[ \\xA0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]"
            },

            peg$currPos = 0,
            peg$reportedPos = 0,
            peg$cachedPos = 0,
            peg$cachedPosDetails = {
                line: 1,
                column: 1,
                seenCR: false
            },
            peg$maxFailPos = 0,
            peg$maxFailExpected = [],
            peg$silentFails = 0,

            peg$result;

        if ("startRule" in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
            }

            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
            return input.substring(peg$reportedPos, peg$currPos);
        }

        function offset() {
            return peg$reportedPos;
        }

        function line() {
            return peg$computePosDetails(peg$reportedPos).line;
        }

        function column() {
            return peg$computePosDetails(peg$reportedPos).column;
        }

        function expected(description) {
            throw peg$buildException(
                null, [{
                    type: "other",
                    description: description
                }],
                peg$reportedPos
            );
        }

        function error(message) {
            throw peg$buildException(message, null, peg$reportedPos);
        }

        function peg$computePosDetails(pos) {
            function advance(details, startPos, endPos) {
                var p, ch;

                for (p = startPos; p < endPos; p++) {
                    ch = input.charAt(p);
                    if (ch === "\n") {
                        if (!details.seenCR) {
                            details.line++;
                        }
                        details.column = 1;
                        details.seenCR = false;
                    } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                        details.line++;
                        details.column = 1;
                        details.seenCR = true;
                    } else {
                        details.column++;
                        details.seenCR = false;
                    }
                }
            }

            if (peg$cachedPos !== pos) {
                if (peg$cachedPos > pos) {
                    peg$cachedPos = 0;
                    peg$cachedPosDetails = {
                        line: 1,
                        column: 1,
                        seenCR: false
                    };
                }
                advance(peg$cachedPosDetails, peg$cachedPos, pos);
                peg$cachedPos = pos;
            }

            return peg$cachedPosDetails;
        }

        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) {
                return;
            }

            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }

            peg$maxFailExpected.push(expected);
        }

        function peg$buildException(message, expected, pos) {
            function cleanupExpected(expected) {
                var i = 1;

                expected.sort(function(a, b) {
                    if (a.description < b.description) {
                        return -1;
                    } else if (a.description > b.description) {
                        return 1;
                    } else {
                        return 0;
                    }
                });

                while (i < expected.length) {
                    if (expected[i - 1] === expected[i]) {
                        expected.splice(i, 1);
                    } else {
                        i++;
                    }
                }
            }

            function buildMessage(expected, found) {
                function stringEscape(s) {
                    function hex(ch) {
                        return ch.charCodeAt(0).toString(16).toUpperCase();
                    }

                    return s
                        .replace(/\\/g, '\\\\')
                        .replace(/"/g, '\\"')
                        .replace(/\x08/g, '\\b')
                        .replace(/\t/g, '\\t')
                        .replace(/\n/g, '\\n')
                        .replace(/\f/g, '\\f')
                        .replace(/\r/g, '\\r')
                        .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) {
                            return '\\x0' + hex(ch);
                        })
                        .replace(/[\x10-\x1F\x80-\xFF]/g, function(ch) {
                            return '\\x' + hex(ch);
                        })
                        .replace(/[\u0180-\u0FFF]/g, function(ch) {
                            return '\\u0' + hex(ch);
                        })
                        .replace(/[\u1080-\uFFFF]/g, function(ch) {
                            return '\\u' + hex(ch);
                        });
                }

                var expectedDescs = new Array(expected.length),
                    expectedDesc, foundDesc, i;

                for (i = 0; i < expected.length; i++) {
                    expectedDescs[i] = expected[i].description;
                }

                expectedDesc = expected.length > 1 ? expectedDescs.slice(0, -1).join(", ") + " or " + expectedDescs[expected.length - 1] : expectedDescs[0];

                foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

                return "Expected " + expectedDesc + " but " + foundDesc + " found.";
            }

            var posDetails = peg$computePosDetails(pos),
                found = pos < input.length ? input.charAt(pos) : null;

            if (expected !== null) {
                cleanupExpected(expected);
            }

            return new SyntaxError(
                message !== null ? message : buildMessage(expected, found),
                expected,
                found,
                pos,
                posDetails.line,
                posDetails.column
            );
        }

        function peg$parsestart() {
            var s0, s1, s2, s3, s4, s5, s6;

            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parsews();
            while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parsews();
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parseentry();
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    s4 = peg$currPos;
                    s5 = [];
                    s6 = peg$parsews();
                    while (s6 !== peg$FAILED) {
                        s5.push(s6);
                        s6 = peg$parsews();
                    }
                    if (s5 !== peg$FAILED) {
                        s6 = peg$parseentry();
                        if (s6 !== peg$FAILED) {
                            peg$reportedPos = s4;
                            s5 = peg$c2(s6);
                            s4 = s5;
                        } else {
                            peg$currPos = s4;
                            s4 = peg$c0;
                        }
                    } else {
                        peg$currPos = s4;
                        s4 = peg$c0;
                    }
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        s4 = peg$currPos;
                        s5 = [];
                        s6 = peg$parsews();
                        while (s6 !== peg$FAILED) {
                            s5.push(s6);
                            s6 = peg$parsews();
                        }
                        if (s5 !== peg$FAILED) {
                            s6 = peg$parseentry();
                            if (s6 !== peg$FAILED) {
                                peg$reportedPos = s4;
                                s5 = peg$c2(s6);
                                s4 = s5;
                            } else {
                                peg$currPos = s4;
                                s4 = peg$c0;
                            }
                        } else {
                            peg$currPos = s4;
                            s4 = peg$c0;
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        s4 = [];
                        s5 = peg$parsews();
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parsews();
                        }
                        if (s4 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c3(s2, s3);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parseentry() {
            var s0;

            s0 = peg$parselanguageKey();
            if (s0 === peg$FAILED) {
                s0 = peg$parsecomment();
            }

            return s0;
        }

        function peg$parselanguageKey() {
            var s0, s1, s2, s3, s4, s5, s6, s7;

            s0 = peg$currPos;
            s1 = peg$parseStringLiteral();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parsews();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parsews();
                }
                if (s2 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 61) {
                        s3 = peg$c4;
                        peg$currPos++;
                    } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c5);
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        s4 = [];
                        s5 = peg$parsews();
                        while (s5 !== peg$FAILED) {
                            s4.push(s5);
                            s5 = peg$parsews();
                        }
                        if (s4 !== peg$FAILED) {
                            s5 = peg$parseStringLiteral();
                            if (s5 !== peg$FAILED) {
                                s6 = [];
                                s7 = peg$parsews();
                                while (s7 !== peg$FAILED) {
                                    s6.push(s7);
                                    s7 = peg$parsews();
                                }
                                if (s6 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 59) {
                                        s7 = peg$c6;
                                        peg$currPos++;
                                    } else {
                                        s7 = peg$FAILED;
                                        if (peg$silentFails === 0) {
                                            peg$fail(peg$c7);
                                        }
                                    }
                                    if (s7 !== peg$FAILED) {
                                        peg$reportedPos = s0;
                                        s1 = peg$c8(s1, s5);
                                        s0 = s1;
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$c0;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$c0;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$c0;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parsecomment() {
            var s0;

            s0 = peg$parsemultilineComment();
            if (s0 === peg$FAILED) {
                s0 = peg$parselineComment();
            }

            return s0;
        }

        function peg$parsemultilineComment() {
            var s0, s1, s2, s3, s4, s5;

            s0 = peg$currPos;
            if (input.substr(peg$currPos, 2) === peg$c9) {
                s1 = peg$c9;
                peg$currPos += 2;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c10);
                }
            }
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parsews();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parsews();
                }
                if (s2 !== peg$FAILED) {
                    s3 = peg$currPos;
                    s4 = [];
                    s5 = peg$parseMC_PART();
                    while (s5 !== peg$FAILED) {
                        s4.push(s5);
                        s5 = peg$parseMC_PART();
                    }
                    if (s4 !== peg$FAILED) {
                        peg$reportedPos = s3;
                        s4 = peg$c11();
                    }
                    s3 = s4;
                    if (s3 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 2) === peg$c12) {
                            s4 = peg$c12;
                            peg$currPos += 2;
                        } else {
                            s4 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c13);
                            }
                        }
                        if (s4 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c14(s3);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parselineComment() {
            var s0, s1, s2, s3, s4;

            s0 = peg$currPos;
            s1 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 47) {
                s2 = peg$c15;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c16);
                }
            }
            if (s2 !== peg$FAILED) {
                s3 = [];
                if (input.charCodeAt(peg$currPos) === 47) {
                    s4 = peg$c15;
                    peg$currPos++;
                } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c16);
                    }
                }
                if (s4 !== peg$FAILED) {
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        if (input.charCodeAt(peg$currPos) === 47) {
                            s4 = peg$c15;
                            peg$currPos++;
                        } else {
                            s4 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c16);
                            }
                        }
                    }
                } else {
                    s3 = peg$c0;
                }
                if (s3 !== peg$FAILED) {
                    s2 = [s2, s3];
                    s1 = s2;
                } else {
                    peg$currPos = s1;
                    s1 = peg$c0;
                }
            } else {
                peg$currPos = s1;
                s1 = peg$c0;
            }
            if (s1 === peg$FAILED) {
                s1 = [];
                if (input.charCodeAt(peg$currPos) === 35) {
                    s2 = peg$c17;
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c18);
                    }
                }
                if (s2 !== peg$FAILED) {
                    while (s2 !== peg$FAILED) {
                        s1.push(s2);
                        if (input.charCodeAt(peg$currPos) === 35) {
                            s2 = peg$c17;
                            peg$currPos++;
                        } else {
                            s2 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c18);
                            }
                        }
                    }
                } else {
                    s1 = peg$c0;
                }
            }
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parsews();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parsews();
                }
                if (s2 !== peg$FAILED) {
                    s3 = [];
                    if (peg$c19.test(input.charAt(peg$currPos))) {
                        s4 = input.charAt(peg$currPos);
                        peg$currPos++;
                    } else {
                        s4 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c20);
                        }
                    }
                    while (s4 !== peg$FAILED) {
                        s3.push(s4);
                        if (peg$c19.test(input.charAt(peg$currPos))) {
                            s4 = input.charAt(peg$currPos);
                            peg$currPos++;
                        } else {
                            s4 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c20);
                            }
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c21(s3);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parseStringLiteral() {
            var s0, s1, s2, s3;

            peg$silentFails++;
            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 34) {
                s1 = peg$c23;
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c24);
                }
            }
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$parseDoubleStringCharacter();
                while (s3 !== peg$FAILED) {
                    s2.push(s3);
                    s3 = peg$parseDoubleStringCharacter();
                }
                if (s2 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 34) {
                        s3 = peg$c23;
                        peg$currPos++;
                    } else {
                        s3 = peg$FAILED;
                        if (peg$silentFails === 0) {
                            peg$fail(peg$c24);
                        }
                    }
                    if (s3 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c25(s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 39) {
                    s1 = peg$c26;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c27);
                    }
                }
                if (s1 !== peg$FAILED) {
                    s2 = [];
                    s3 = peg$parseSingleStringCharacter();
                    while (s3 !== peg$FAILED) {
                        s2.push(s3);
                        s3 = peg$parseSingleStringCharacter();
                    }
                    if (s2 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 39) {
                            s3 = peg$c26;
                            peg$currPos++;
                        } else {
                            s3 = peg$FAILED;
                            if (peg$silentFails === 0) {
                                peg$fail(peg$c27);
                            }
                        }
                        if (s3 !== peg$FAILED) {
                            peg$reportedPos = s0;
                            s1 = peg$c25(s2);
                            s0 = s1;
                        } else {
                            peg$currPos = s0;
                            s0 = peg$c0;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            }
            peg$silentFails--;
            if (s0 === peg$FAILED) {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c22);
                }
            }

            return s0;
        }

        function peg$parseDoubleStringCharacter() {
            var s0, s1, s2;

            s0 = peg$currPos;
            s1 = peg$currPos;
            peg$silentFails++;
            if (input.charCodeAt(peg$currPos) === 34) {
                s2 = peg$c23;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c24);
                }
            }
            if (s2 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 92) {
                    s2 = peg$c29;
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c30);
                    }
                }
                if (s2 === peg$FAILED) {
                    s2 = peg$parseLineTerminator();
                }
            }
            peg$silentFails--;
            if (s2 === peg$FAILED) {
                s1 = peg$c28;
            } else {
                peg$currPos = s1;
                s1 = peg$c0;
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parseSourceCharacter();
                if (s2 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c31();
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 92) {
                    s1 = peg$c29;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c30);
                    }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parseEscapeSequence();
                    if (s2 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c32(s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$parseLineContinuation();
                }
            }

            return s0;
        }

        function peg$parseSingleStringCharacter() {
            var s0, s1, s2;

            s0 = peg$currPos;
            s1 = peg$currPos;
            peg$silentFails++;
            if (input.charCodeAt(peg$currPos) === 39) {
                s2 = peg$c26;
                peg$currPos++;
            } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c27);
                }
            }
            if (s2 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 92) {
                    s2 = peg$c29;
                    peg$currPos++;
                } else {
                    s2 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c30);
                    }
                }
                if (s2 === peg$FAILED) {
                    s2 = peg$parseLineTerminator();
                }
            }
            peg$silentFails--;
            if (s2 === peg$FAILED) {
                s1 = peg$c28;
            } else {
                peg$currPos = s1;
                s1 = peg$c0;
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parseSourceCharacter();
                if (s2 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c31();
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 92) {
                    s1 = peg$c29;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) {
                        peg$fail(peg$c30);
                    }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parseEscapeSequence();
                    if (s2 !== peg$FAILED) {
                        peg$reportedPos = s0;
                        s1 = peg$c32(s2);
                        s0 = s1;
                    } else {
                        peg$currPos = s0;
                        s0 = peg$c0;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$parseLineContinuation();
                }
            }

            return s0;
        }

        function peg$parseLineContinuation() {
            var s0, s1, s2;

            s0 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 92) {
                s1 = peg$c29;
                peg$currPos++;
            } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) {
                    peg$fail(peg$c30);
                }
            }
            if (s1 !== peg$FAILED) {
                s2 = peg$parseLineTerminatorSequence();
                if (s2 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c33();
                    s0 = s1;
                } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                }
            } else {
                peg$currPos = s0;
                s0 = peg$c0;
            }

            return s0;
        }

        function peg$parseEscapeSequence() {
            var s0, s1, s2, s3;
